cleanup build & improve test coverage