@@ -176,33 +176,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- open module for junit engine -->
-                    <argLine>
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.acceptance=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.architecture=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.cli=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.compose=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.devcontainer=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.errors=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.os=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.shell=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.test=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.tools=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.utils=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.version=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>templating-maven-plugin</artifactId>
                 <executions>
@@ -222,7 +195,7 @@
                     <execution>
                         <id>build-native</id>
                         <goals>
-                            <goal>build</goal>
+                            <goal>compile-no-fork</goal>
                         </goals>
                         <phase>package</phase>
                     </execution>
@@ -381,6 +354,46 @@
                         <include>src/**/*</include>
                     </includes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>prepare-coverage-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>check-coverage</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <excludes>
+                                        <exclude>*Test</exclude>
+                                    </excludes>
+                                    <limits>
+                                        <limit>
+                                            <counter>INSTRUCTION</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.80</minimum>
+                                        </limit>
+                                        <limit>
+                                            <counter>CLASS</counter>
+                                            <value>MISSEDCOUNT</value>
+                                            <maximum>0</maximum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
